cleaned up code

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,10 @@ body {
   background-repeat: repeat;
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 #header {
   display: flex;
   align-content: space-around;
